feat: implement vision chat interface and creative brief synthesis (Task 2)
- Add chat UI components with streaming support (ChatInterface, VisionPrompt, CreativeBriefSummary)
- Implement OpenAI GPT-4o integration via Vercel AI SDK with prompt engineering
- Add creative brief extraction API with structured data validation
- Implement error handling with retry logic and user-friendly messages
- Add conversation flow utilities and progress tracking
- Integrate Zustand store with localStorage persistence
- Add comprehensive TypeScript types and error handling

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.67",
+    "@ai-sdk/react": "^2.0.93",
     "ai": "^5.0.93",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
