feat: Add Clerk authentication with custom UI (#28)
* feat: Add Clerk authentication with custom UI

- Custom sign-in/sign-up pages with Zod validation
- Protected /projects route with callback URL handling
- Navbar with conditional auth UI and loading states
- Reusable auth components (input, button, error display)
- Backend-ready auth helpers for API integration
- Full-height layout constraints

* protect brand-assets route

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,17 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 # Get your OpenAI API key from: https://platform.openai.com/api-keys
 # Required for chat and creative brief extraction features
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Clerk Authentication
+# Get your Clerk API keys from: https://dashboard.clerk.com
+# Required for authentication features
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
+CLERK_SECRET_KEY=sk_test_your_secret_key_here
+
+# Clerk Redirect URLs
+# Custom sign-in/sign-up URLs
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+# Redirect URLs after authentication
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/projects
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/projects
