--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.67",
     "@ai-sdk/react": "^2.0.93",
+    "@clerk/nextjs": "^6.35.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.0.3",
     "ai": "^5.0.93",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +24,7 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.1",
     "tailwind-merge": "^3.4.0",
     "web-vitals": "^4.2.4",
     "zod": "^4.1.12",
