--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/openai": "^2.0.67",
     "@ai-sdk/react": "^2.0.93",
     "@clerk/nextjs": "^6.35.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
