no functional changes, still using localStorage

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -20,3 +20,9 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 # Redirect URLs after authentication
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/projects
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/projects
+NEXT_PUBLIC_FIREBASE_API_KEY=AIza...
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=jant-vid-pipe-fire.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=jant-vid-pipe-fire
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=jant-vid-pipe-fire.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=example
+NEXT_PUBLIC_FIREBASE_APP_ID=example
