--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.67",
     "@ai-sdk/react": "^2.0.93",
-    "@clerk/nextjs": "^6.35.2",
     "@dnd-kit/core": "^6.3.1",
+    "firebase": "^12.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
